--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Post</h1>
-
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">
+      Blog New POST
+    </a>
+  </div>
+</div>
+</nav>
 <%= render 'form', post: @post %>
-
 <%= link_to 'Back', posts_path %>
