--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,38 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">
+      Blog Posts
+    </a>
+  </div>
+</div>
+</nav>
 
-<table>
-  <thead>
+<table class="table">
+<thead>
+  <tr>
+    <th>User</th>
+    <th>Comment</th>
+    <th colspan="3"></th>
+  </tr>
+</thead>
+
+<tbody>
+  <% @posts.each do |post| %>
     <tr>
-      <th>User</th>
-      <th>Comment</th>
-      <th colspan="3"></th>
+      <td><%= post.user_id %></td>
+      <td><%= post.comment %></td>
+      <td><%= link_to 'Show', post %></td>
+      <td><%= link_to 'Edit', edit_post_path(post) %></td>
+      <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
-  </thead>
+  <% end %>
+</tbody>
+<%= link_to 'New Post', new_post_path %>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.user_id %></td>
-        <td><%= post.comment %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+</div>
 </table>
 
-<br>
 
-<%= link_to 'New Post', new_post_path %>
+
