--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,22 @@
+
+<div class="panel panel-default">
+<div class="panel-body">
+
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>User:</strong>
   <%= @post.user_id %>
 </p>
-
 <p>
-  <strong>Comment:</strong>
-  <%= @post.comment %>
+<strong>Comment:</strong>
+<%= @post.comment %>
 </p>
-
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+</div>
+</div>
+
+
+
+
