--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,10 @@
-<%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
+ <div class="row">
+ <div class="col-sm-4">
+ <%= form_with(model: user, local: true) do |form| %>
+  <% if user.errors.any? %>
+    <div  class="form-group ">
+      <h5 class="danger"><%= pluralize(post.errors.count, "error") %> prohibited this user from being saved:</h5>
       <ul>
       <% user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -10,18 +12,22 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :user_name %>
+  <div class="form-group">
+  <%= form.label :name %>
+  <%= form.text_field :name, id: :user_name,class:'form-control' %>
   </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :user_email %>
+  <div class="form-group">
+  <%= form.label :email %>
+  <%= form.text_field :email, id: :user_email,class:'form-control' %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  </br>
+  <div class="form-group">
+  <%= form.submit :create, class:"btn btn-success"%>
   </div>
 <% end %>
+</div>
+</div> 
+
+
+
+
