--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,18 @@
+
+
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">
+      Blog users
+    </a>
+  </div>
+</div>
+</nav>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
