--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+
+<div class="panel panel-default">
+<div class="panel-body">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -12,3 +16,5 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</div>
+</div>
